# nhp-abcd-bids-pipeline

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  SetupEnv.sh  build-and-zip.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
app/: fmri_volume.py  helpers.py  pipelines.py  run.py  shim.py
brainvis.wustl.edu/: Caret7.conf
configs/: Daphne_config.toml  baloo_config.toml  cannellini_config.toml  env  quill_config.toml
dcan-macaque-pipeline/: README.md
dcan-macaque-pipeline/DiffusionPreprocessing/: DiffPreprocPipeline.sh
dcan-macaque-pipeline/Examples/Scripts/: AllGenericfMRISurfaceProcessingPipeline.bat  IcaFixProcessingBatch.7T.sh  PreFreeSurferPipeLine.bat  generate_level1_fsf.sh
dcan-macaque-pipeline/FreeSurfer/: FreeSurferPipelineNHP.sh  FreeSurferPipelineNHP_ef060216.sh
dcan-macaque-pipeline/FreeSurfer/scripts/: Change2AdultIntensity.bash  FreeSurferHiresPial_workaround.sh  FreeSurferHiresWhite_backup.sh  FreeSurferHiresWhite_fake_headers.sh
dcan-macaque-pipeline/PreliminaryMasking/: macaque_masking.py
dcan-macaque-pipeline/fMRISurface/: GenericfMRISurfaceProcessingPipeline.sh
docker/: Dockerfile  Dockerfile.circleci
hooks/: post_checkout
nhp_abcd/: VERSION  __init__.py  helpers.py  shim.py
nhp_abcd/pipelines/: __init__.py  fmri_volume.py  outputs.json  pipelines.py
nhp_abcd/scripts/: run.py
scripts/: SetupEnv.sh  entrypoint.sh
tools/: build-and-zip.sh  download-templates.sh  generate_requirements_txt.py
(+74 files in other folders)
