# [metadata]
# name = 
# author = 
# author_email = 
# url= 
# version = 
# license_files = LICENSE
# long_description = file: README.md
# long_description_content_type = text/markdown

# [options]
# packages = find:
# zip_safe = True
# install_requires =
#     nibabel >= 3.2.2

[options.extras_require]
dev =
    black >= 20.8b0
all =
    %(dev)s

[pycodestyle]
ignore = E203, W503
max-line-length = 120
